AMBARI-2040. Customize Services page: reduce padding to prevent tabs from wrapping. (yusaku)
git-svn-id: https://svn.apache.org/repos/asf/incubator/ambari/trunk@1478117 13f79535-47bb-0310-9956-ffa450edef68

--- a/ambari-web/app/styles/application.less
+++ b/ambari-web/app/styles/application.less
@@ -639,6 +639,10 @@ h1 {
       height: 200px;
     }
   }
+  .nav-tabs > li > a {
+    padding-left: 8px;
+    padding-right: 8px;
+  }
 }
 
 a:focus {
